# cloudQuant

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  LICENSE  PROFILE.md  README.md  SECURITY.md  _config.yml  commitlint.config.js  package.json  pyproject.toml
.devcontainer/: README.md  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml  pages.yml  release.yml
.opencode/skills/bmad-brainstorming/steps/: step-03-technique-execution.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_config/ides/: claude-code.yaml  codex.yaml  cursor.yaml  opencode.yaml  windsurf.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
design-artifacts/: README.md
design-artifacts/A-Product-Brief/: README.md  product-brief.md
design-artifacts/B-Trigger-Map/: README.md  trigger-map.md
design-artifacts/C-UX-Scenarios/: README.md  ux-scenarios.md
design-artifacts/D-Design-System/: README.md  design-system.md
design-artifacts/E-PRD/: README.md  prd.md
design-artifacts/F-Testing/: README.md  testing-plan.md
design-artifacts/G-Product-Development/: README.md  development-plan.md
docs/: README.md  TRANSLATING.md
docs/api/: README.md  REFERENCE.md  openapi.yaml
docs/architecture/: README.md
docs/architecture/adr/: ADR-000-template.md  ADR-001-bmad-modular-architecture.md  ADR-002-multi-ide-configuration.md  ADR-003-documentation-structure.md  ADR-004-technology-stack.md  ADR-005-data-storage.md  ADR-006-backtest-engine.md  INDEX.md  README.md
docs/guides/: README.md  best-practices.md  module-development.md  quick-start.md  workflow-creation.md
examples/: README.md  simple_backtest.py
src/cloudquant/: __init__.py  types.py
src/cloudquant/core/: __init__.py  engine.py
src/cloudquant/data/: __init__.py  loader.py
src/cloudquant/strategy/: __init__.py  base.py  simple.py
src/cloudquant/utils/: __init__.py  financial.py
tests/: conftest.py  test_data_loader.py  test_engine.py  test_financial.py  test_init.py  test_strategy.py
