[project]
name = "cloudquant"
version = "0.1.0"
description = "AI-Powered Development Framework for Quantitative Trading Systems"
authors = [{ name = "cloudQuant Team", email = "yunjinqi@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["quantitative-trading", "backtesting", "algorithmic-trading", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/cloudQuant"
Documentation = "https://github.com/cloudQuant/cloudQuant/tree/main/docs"
Repository = "https://github.com/cloudQuant/cloudQuant.git"
Issues = "https://github.com/cloudQuant/cloudQuant/issues"
Changelog = "https://github.com/cloudQuant/cloudQuant/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=1.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "pandas-stubs>=2.2.0",
]
backtest = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "numba>=0.59.0",
]
data = [
    "akshare>=1.12.0",
    "yfinance>=0.2.0",
    "ccxt>=4.2.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "tensorflow>=2.15.0",
]
viz = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "streamlit>=1.31.0",
]
all = [
    "cloudquant[dev,backtest,data,ml,viz]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudquant"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "backtest: marks tests related to backtesting",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*", "cloudquant.data.*", "pyarrow.*"]
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["cloudquant"]
known-third-party = ["pandas", "numpy", "pytest"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["cloudquant"]
known_third_party = ["pandas", "numpy", "pytest"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
